entity_macros/tests/ui/derive/ent_wrapper/enum/unsupported-tuple-variant.stderr
error: Unsupported shape `tuple`
 --> $DIR/unsupported-tuple-variant.rs:3:10
  |
3 | #[derive(EntWrapper)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
