entity_macros/tests/ui/derive/ent_wrapper/enum/unsupported-tuple-variant.rs
use entity::EntWrapper;

#[derive(EntWrapper)]
enum TestEnt {
    A(u32, u32),
    B(u32, u32),
}

fn main() {}
